@@ -1,4 +1,39 @@
 AC_INIT(configure.in)
+
+#------------------------------------------------------------------------------------
+# LinuxSampler's / liblinuxsampler's "official" release version:
+
+LINUXSAMPLER_RELEASE_MAJOR=0
+LINUXSAMPLER_RELEASE_MINOR=3
+LINUXSAMPLER_RELEASE_BUILD=3
+
+#------------------------------------------------------------------------------------
+# The following is the libtool / shared library version. This doesn't have to
+# do anything with the release version. It MUST conform to the following rules:
+#
+#  1. Start with version information of `0:0:0' for each libtool library.
+#  2. Update the version information only immediately before a public release of
+#     your software. More frequent updates are unnecessary, and only guarantee
+#     that the current interface number gets larger faster.
+#  3. If the library source code has changed at all since the last update, then
+#     increment revision (`c:r:a' becomes `c:r+1:a').
+#  4. If any interfaces have been added, removed, or changed since the last update,
+#     increment current, and set revision to 0.
+#  5. If any interfaces have been added since the last public release, then increment
+#     age.
+#  6. If any interfaces have been removed since the last public release, then set age
+#     to 0.
+
+LIBLINUXSAMPLER_LT_CURRENT=0
+LIBLINUXSAMPLER_LT_REVISION=0
+LIBLINUXSAMPLER_LT_AGE=0
+SHARED_VERSION_INFO="$LIBLINUXSAMPLER_LT_CURRENT:$LIBLINUXSAMPLER_LT_REVISION:$LIBLINUXSAMPLER_LT_AGE"
+
+AM_PROG_LIBTOOL
+
+AC_SUBST(SHLIB_VERSION_ARG)
+AC_SUBST(SHARED_VERSION_INFO)
+
 AC_C_BIGENDIAN
 AC_CANONICAL_SYSTEM
 
@@ -549,7 +584,7 @@ fi
 # Create Build Files
 
 AM_CONFIG_HEADER(config.h)
-AM_INIT_AUTOMAKE(linuxsampler, 0.3.3)
+AM_INIT_AUTOMAKE(linuxsampler, "$LINUXSAMPLER_RELEASE_MAJOR.$LINUXSAMPLER_RELEASE_MINOR.$LINUXSAMPLER_RELEASE_BUILD")
 
 AC_LANG_CPLUSPLUS
 AC_PROG_CXX
@@ -564,8 +599,6 @@ fi
 # autoconf 2.59/libtool 1.5.12 bug? work-around. Without a check like
 # this, the dlfcn.h check in am_prog_libtool may fail.
 AC_CHECK_HEADER(stdlib.h)
-
-AM_PROG_LIBTOOL
 
 AC_OUTPUT( \
     Makefile \
@@ -592,6 +625,8 @@ AC_OUTPUT( \
     Documentation/Makefile \
     Documentation/Engines/Makefile \
     Documentation/Engines/gig/Makefile \
+    linuxsampler.pc \
+    Doxyfile \
 )
 
 
