@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: linuxsampler
+Description: LinuxSampler C++ library
+Version: @VERSION@
+Libs: -L${libdir} -llinuxsampler
+Cflags: -I${includedir}
